src/main/default/objects/WebCart/fields/Buyer_Email__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Email__c</fullName>
    <description>Used to capture buyer email on checkout flow.</description>
    <label>Buyer Email</label>
    <type>Email</type>
</CustomField>