src/main/default/objects/WebCart/fields/Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name__c</fullName>
    <description>Used to capture buyer name on checkout flow.</description>
    <label>Buyer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>