src/main/default/objects/WebCart/fields/Buyer_OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>Buyer_OrganizationName__c</fullName>
    <description>Buyer_OrganizationName__c</description>
    <label>Buyer Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>