src/main/default/objects/WebCart/fields/Buyer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Phone__c</fullName>
    <description>Used to capture buyer phone on checkout flow.</description>
    <label>Buyer Phone</label>
    <type>Phone</type>
</CustomField>