src/main/default/objects/WebCart/fields/DR_Amount_Contributed__c.field-meta.xml
<CustomField>
    <fullName>DR_Amount_Contributed__c</fullName>
    <description>Amount contributed by store credit.</description>
    <inlineHelpText>Amount contributed by store credit.</inlineHelpText>
    <label>DR Amount Contributed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>