src/main/default/objects/WebCart/fields/DR_Amount_Remaining_to_be_Contributed__c.field-meta.xml
<CustomField>
    <fullName>DR_Amount_Remaining_to_be_Contributed__c</fullName>
    <description>Remaining amount after store credit contribution.</description>
    <inlineHelpText>Remaining amount after store credit contribution.</inlineHelpText>
    <label>DR Amount Remaining to be Contributed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>