src/main/default/objects/WebCart/fields/DR_CartItemStructure__c.field-meta.xml
<CustomField>
    <fullName>DR_CartItemStructure__c</fullName>
        <label>CartItemStructure</label>
        <length>32768</length>
        <type>Html</type>
</CustomField>