src/main/default/objects/WebCart/fields/DR_Checkout_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_Checkout_Id__c</fullName>
    <description>The Digital River Checkout Identifier</description>
    <inlineHelpText>The Digital River Checkout Identifier</inlineHelpText>
    <label>DR Checkout Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>