src/main/default/objects/WebCart/fields/DR_Checkout_Type__c.field-meta.xml
<CustomField>
    <fullName>DR_Checkout_Type__c</fullName>
    <description>The type of products stored in the Cart: Non-Digital, Digital</description>
    <inlineHelpText>The type of products stored in the Cart: Non-Digital, Digital</inlineHelpText>
    <label>DR Checkout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Non-Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>