src/main/default/objects/WebCart/fields/DR_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>DR_Customer_Type__c</fullName>
    <description>Indicates the Customer Type stamped on the Cart.</description>
    <inlineHelpText>Indicates the Customer Type stamped on the Cart.</inlineHelpText>
    <label>DR Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>individual</fullName>
                <default>true</default>
                <label>individual</label>
            </value>
            <value>
                <fullName>business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>