src/main/default/objects/WebCart/fields/DR_Guest_IpAddress__c.field-meta.xml
<CustomField>
    <fullName>DR_Guest_IpAddress__c</fullName>
        <label>DR Guest IpAddress</label>
        <length>50</length>
        <type>Text</type>
</CustomField>