src/main/default/objects/WebCart/fields/DR_Payment_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_Payment_Session_Id__c</fullName>
    <description>The Digital River Payment Session Identifier</description>
    <inlineHelpText>The Digital River Payment Session Identifier</inlineHelpText>
    <label>DR Payment Session Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>