src/main/default/objects/WebCart/fields/DR_Selling_Entity__c.field-meta.xml
<CustomField>
    <fullName>DR_Selling_Entity__c</fullName>
    <description>The Digital River Business Selling Entity</description>
    <inlineHelpText>The Digital River Business Selling Entity</inlineHelpText>
    <label>DR Selling Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>