src/main/default/objects/WebCart/fields/DR_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_Source_Id__c</fullName>
    <description>Stores a source Id attached to a checkout record</description>
    <inlineHelpText>Stores a source Id attached to a checkout record</inlineHelpText>
    <label>DR Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>