src/main/default/objects/WebCart/fields/DR_Tax_Identifiers__c.field-meta.xml
<CustomField>
    <fullName>DR_Tax_Identifiers__c</fullName>
    <description>Comma-separated list of Global Tax Identifiers that are applied to this Cart. This captures the Unique Id generated by DR for each Tax identifier and does not store the actual Tax identifier value entered by the Customer.</description>
    <inlineHelpText>Comma-separated list of Global Tax Identifiers that are applied to this Cart. This captures the Unique Id generated by DR for each Tax identifier and does not store the actual Tax identifier value entered by the Customer.</inlineHelpText>
    <label>DR Tax Identifiers</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>