src/main/default/objects/WebCart/fields/DR_Total_Duty__c.field-meta.xml
<CustomField>
    <fullName>DR_Total_Duty__c</fullName>
    <description>Indicates the total amount of duty levied by the importing country.</description>
    <inlineHelpText>Indicates the total amount of duty levied by the importing country.</inlineHelpText>
    <label>DR Total Duty</label>
    <summarizedField>CartItem.DR_Duty__c</summarizedField>
    <summaryForeignKey>CartItem.CartId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>