src/main/default/objects/WebCart/fields/DR_Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>DR_Total_Fees__c</fullName>
    <description>Regulatory Fees collected to address the manufacture, use, recovery, and recycling of Consumer Electronics products throughout the world.</description>
    <inlineHelpText>Regulatory Fees collected to address the manufacture, use, recovery, and recycling of Consumer Electronics products throughout the world.</inlineHelpText>
    <label>DR Total Fees</label>
    <summarizedField>CartItem.DR_Regulatory_Fee__c</summarizedField>
    <summaryForeignKey>CartItem.CartId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>