src/main/default/objects/WebCart/fields/DR_Total_IOR_Tax__c.field-meta.xml
<CustomField>
    <fullName>DR_Total_IOR_Tax__c</fullName>
    <description>Represents how much taxes the importer of record remits to the government.</description>
    <inlineHelpText>Represents how much taxes the importer of record remits to the government.</inlineHelpText>
    <label>DR Total IOR Tax</label>
    <summarizedField>CartItem.DR_IOR_Tax__c</summarizedField>
    <summaryForeignKey>CartItem.CartId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>