src/main/default/objects/WebCart/fields/Has_Landed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Has_Landed_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, indicates the Cart has Landed Costs associated with it. When false, indicates that the Cart does not have Landed Costs.</description>
    <inlineHelpText>When true, indicates the Cart has Landed Costs associated with it. When false, indicates that the Cart does not have Landed Costs.</inlineHelpText>
    <label>Has Landed Cost</label>
    <type>Checkbox</type>
</CustomField>