src/main/default/objects/WebCart/fields/Recurring_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Line_Item_Count__c</fullName>
    <description>Indicates the Number of Recurring Line Items in this Cart</description>
    <inlineHelpText>Indicates the Number of Recurring Line Items in this Cart</inlineHelpText>
    <label>Recurring Line Item Count</label>
    <summaryFilterItems>
        <field>CartItem.Recurring_Line_Item__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CartItem.CartId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>