src/main/default/objects/WebCart/listViews/All_WebCarts.listView-meta.xml
<ListView>
    <fullName>All_WebCarts</fullName>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>GrandTotalAmount</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <columns>Account</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>Type</field>
        <operation>equals</operation>
        <value>C</value>
    </filters>
    <label>All Active Carts</label>
</ListView>